Alterando AluraFlix para LMflix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <title>Aluraflix</title>
+    <title>LMflix</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,7 +17,7 @@
 <body>
 
 
-    <header>ALURAFLIX</header>
+    <header>LMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
